[gd_scene load_steps=4 format=3 uid="uid://yvtvipnhx7gj"]

[ext_resource type="Script" uid="uid://clana87guq28w" path="res://scripts/game_over_screen.gd" id="1_iwahs"]
[ext_resource type="Theme" uid="uid://d2xo8y5tjg5ou" path="res://assets/graphics/ui/ui_theme.tres" id="3_wa2qn"]
[ext_resource type="Texture2D" uid="uid://l8xkevorlnyd" path="res://assets/graphics/ui/button.png" id="4_cyfkl"]

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwahs")

[node name="YourScore" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 368.0
offset_top = 130.0
offset_right = 711.0
offset_bottom = 185.0
theme = ExtResource("3_wa2qn")
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 40
text = "Score : "

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.176215
anchor_top = 0.155864
anchor_right = 0.818576
anchor_bottom = 0.240741
offset_left = 0.000335693
offset_top = -75.9999
offset_right = 0.000366211
offset_bottom = -70.0002
grow_horizontal = 2
theme = ExtResource("3_wa2qn")
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 60
text = "Mate, DesiRay-Chan!"
horizontal_alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.164063
anchor_right = 0.386285
anchor_bottom = 1.0
offset_left = 60.0
offset_right = 60.0
grow_vertical = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer2"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 2
texture = ExtResource("4_cyfkl")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="REStartButton" type="Button" parent="CenterContainer2/NinePatchRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wa2qn")
text = "Restart"
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 602.0
offset_right = -238.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
texture_filter = 1
custom_minimum_size = Vector2(312, 128)
layout_mode = 2
texture = ExtResource("4_cyfkl")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6
metadata/_edit_group_ = true

[node name="StartupButton" type="Button" parent="CenterContainer/NinePatchRect"]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_wa2qn")
text = "Main menu"
flat = true
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="CenterContainer2/NinePatchRect/REStartButton" to="." method="_on_re_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/StartupButton" to="." method="_on_startup_button_pressed"]
